# moos-ntu-heron

./: README.md
esoe_test/: launch_shoreside.sh  launch_vehicle.sh  meta_shoreside.moos  plug_origin_warp.moos
esoe_test/map/: esoe.info  esoe.tif
moos-ivp-aquaticus/.svn/: wc.db
moos-ivp-aquaticus/aisc/: README.md
moos-ivp-aquaticus/jervis_maps/: jervis_esat_17.info  jervis_osm_17.info  jervis_s_osm_17.info  jervis_s_osm_18.info  jervis_s_satgoo_17.info  jervis_s_shgoo_18.info  jervis_satgoo_17.info
moos-ivp-aquaticus/missions/charles-2023/: meta_common_mit.bhv  meta_vehicle_kev2.bhv  meta_vehicle_pav1.bhv
moos-ivp-aquaticus/missions/j1_aquaticus/: clean.sh  launch_shoreside.sh  meta_vehicle.moos  plug_commandfolio.txt  plug_origin_warp.moos  targ_shoreside.moos
moos-ivp-aquaticus/missions/jervis-2023/: aliases.txt  jerop.sh  launch_demo.sh  notes.txt  region_info.txt
moos-ivp-aquaticus/missions/jervis-2023/shoreside/: jervis_esat_17.info  launch_shoreside.sh  meta_shoreside.moos
moos-ivp-aquaticus/missions/jervis-2023/surveyor/: meta_surveyor.moos  meta_surveyor_kevin2.bhv  meta_surveyor_kevin3.bhv  meta_surveyor_kevin4.bhv  plug_uProcessWatch.moos  plug_uSimMarine.moos
moos-ivp-aquaticus/missions_devel/b-s-a-l/: README-EXPERIMENTS
moos-ivp-aquaticus/missions_devel/b-s-a-l/heron/: meta_heron_blue.bhv  meta_heron_red.bhv  plug_pRoleChooser.moos  plug_pZoneTrackOpponents_red.moos
moos-ivp-aquaticus/missions_devel/b-s-a-l/shoreside/: launch_shoreside.sh
moos-ivp-aquaticus/src/: CMakeLists.txt
moos-ivp-aquaticus/src/attic/pMapMarkers/: OpField.cpp  OpField.h
moos-ivp-aquaticus/src/lib_behaviors-aq/: CMakeLists.txt
moos-ivp-aquaticus/src/lib_bhv_colregsV23/: BHV_AvdColregsV23.h  CMakeLists.txt  README
moos-ivp-aquaticus/src/pAlias/: AliasApp.cpp  AliasApp.h  CMakeLists.txt  main.cpp
moos-ivp-aquaticus/src/pAquaticusStateMgr/: AquaticusStateMgr.cpp  CMakeLists.txt
moos-ivp-aquaticus/src/uFldFlagManager/: FlagManager_Info.cpp
moos-ivp-aquaticus/src/uFldTagManager/: TagManager.cpp  TagManager_Info.cpp
moos-ivp-aquaticus/src_devel/pFieldSensor/: CMakeLists.txt  FieldSensor.cpp  FieldSensor_Info.cpp  pFieldSensor.moos
moos-ivp-aquaticus/src_devel/pRoleChooser/: CMakeLists.txt  RoleChooser_Info.h
